@@ -1,0 +1,13 @@
+# This file is auto-generated by 'make config'.
+# Options for perl-threaded-5.14.4
+_OPTIONS_READ=perl-threaded-5.14.4
+_FILE_COMPLETE_OPTIONS_LIST=DEBUG GDBM MULTIPLICITY PERL_64BITINT PERL_MALLOC PTHREAD SITECUSTOMIZE THREADS USE_PERL
+OPTIONS_FILE_UNSET+=DEBUG
+OPTIONS_FILE_UNSET+=GDBM
+OPTIONS_FILE_UNSET+=MULTIPLICITY
+OPTIONS_FILE_SET+=PERL_64BITINT
+OPTIONS_FILE_UNSET+=PERL_MALLOC
+OPTIONS_FILE_SET+=PTHREAD
+OPTIONS_FILE_UNSET+=SITECUSTOMIZE
+OPTIONS_FILE_SET+=THREADS
+OPTIONS_FILE_SET+=USE_PERL
