@@ -1,0 +1,83 @@
+# This file is auto-generated by 'make config'.
+# Options for apache22-2.2.25
+_OPTIONS_READ=apache22-2.2.25
+_FILE_COMPLETE_OPTIONS_LIST=AUTH_BASIC		 AUTH_DIGEST		 AUTHN_ALIAS		 AUTHN_ANON		 AUTHN_DBD		 AUTHN_DBM		 AUTHN_DEFAULT		 AUTHN_FILE		 AUTHZ_DBM		 AUTHZ_DEFAULT		 AUTHZ_GROUPFILE		 AUTHZ_HOST		 AUTHZ_OWNER		 AUTHZ_USER		 AUTHNZ_LDAP		 LDAP			 DBD			 CACHE			 DISK_CACHE		 FILE_CACHE		 MEM_CACHE		 DAV			 DAV_FS			 DAV_LOCK		 ACTIONS			 ALIAS			 ASIS			 AUTOINDEX		 CERN_META		 CGI			 CGID			 CHARSET_LITE		 DEFLATE			 DIR			 DUMPIO			 ENV			 EXPIRES			 HEADERS			 IMAGEMAP		 INCLUDE			 INFO			 LOG_CONFIG		 LOGIO			 MIME			 MIME_MAGIC		 NEGOTIATION		 REWRITE			 SETENVIF		 SPELING			 STATUS			 UNIQUE_ID		 USERDIR			 USERTRACK		 VHOST_ALIAS		 FILTER			 SUBSTITUTE		 VERSION			 SSL			 SUEXEC			 SUEXEC_RSRCLIMIT	 SUEXEC_USERDIR		 REQTIMEOUT		 PROXY			 IPV4_MAPPED		 BUCKETEER		 CASE_FILTER		 CASE_FILTER_IN		 EXT_FILTER		 LOG_FORENSIC		 OPTIONAL_HOOK_EXPORT	 OPTIONAL_HOOK_IMPORT	 OPTIONAL_FN_IMPORT	 OPTIONAL_FN_EXPORT PROXY_AJP PROXY_BALANCER PROXY_CONNECT PROXY_FTP PROXY_HTTP PROXY_SCGI
+OPTIONS_FILE_SET+=AUTH_BASIC
+OPTIONS_FILE_SET+=AUTH_DIGEST
+OPTIONS_FILE_SET+=AUTHN_ALIAS
+OPTIONS_FILE_SET+=AUTHN_ANON
+OPTIONS_FILE_UNSET+=AUTHN_DBD
+OPTIONS_FILE_SET+=AUTHN_DBM
+OPTIONS_FILE_SET+=AUTHN_DEFAULT
+OPTIONS_FILE_SET+=AUTHN_FILE
+OPTIONS_FILE_SET+=AUTHZ_DBM
+OPTIONS_FILE_SET+=AUTHZ_DEFAULT
+OPTIONS_FILE_SET+=AUTHZ_GROUPFILE
+OPTIONS_FILE_SET+=AUTHZ_HOST
+OPTIONS_FILE_SET+=AUTHZ_OWNER
+OPTIONS_FILE_SET+=AUTHZ_USER
+OPTIONS_FILE_UNSET+=AUTHNZ_LDAP
+OPTIONS_FILE_UNSET+=LDAP
+OPTIONS_FILE_UNSET+=DBD
+OPTIONS_FILE_SET+=CACHE
+OPTIONS_FILE_SET+=DISK_CACHE
+OPTIONS_FILE_SET+=FILE_CACHE
+OPTIONS_FILE_UNSET+=MEM_CACHE
+OPTIONS_FILE_SET+=DAV
+OPTIONS_FILE_SET+=DAV_FS
+OPTIONS_FILE_UNSET+=DAV_LOCK
+OPTIONS_FILE_SET+=ACTIONS
+OPTIONS_FILE_SET+=ALIAS
+OPTIONS_FILE_SET+=ASIS
+OPTIONS_FILE_SET+=AUTOINDEX
+OPTIONS_FILE_SET+=CERN_META
+OPTIONS_FILE_SET+=CGI
+OPTIONS_FILE_UNSET+=CGID
+OPTIONS_FILE_SET+=CHARSET_LITE
+OPTIONS_FILE_SET+=DEFLATE
+OPTIONS_FILE_SET+=DIR
+OPTIONS_FILE_SET+=DUMPIO
+OPTIONS_FILE_SET+=ENV
+OPTIONS_FILE_SET+=EXPIRES
+OPTIONS_FILE_SET+=HEADERS
+OPTIONS_FILE_SET+=IMAGEMAP
+OPTIONS_FILE_SET+=INCLUDE
+OPTIONS_FILE_SET+=INFO
+OPTIONS_FILE_SET+=LOG_CONFIG
+OPTIONS_FILE_SET+=LOGIO
+OPTIONS_FILE_SET+=MIME
+OPTIONS_FILE_SET+=MIME_MAGIC
+OPTIONS_FILE_SET+=NEGOTIATION
+OPTIONS_FILE_SET+=REWRITE
+OPTIONS_FILE_SET+=SETENVIF
+OPTIONS_FILE_SET+=SPELING
+OPTIONS_FILE_SET+=STATUS
+OPTIONS_FILE_SET+=UNIQUE_ID
+OPTIONS_FILE_SET+=USERDIR
+OPTIONS_FILE_SET+=USERTRACK
+OPTIONS_FILE_SET+=VHOST_ALIAS
+OPTIONS_FILE_SET+=FILTER
+OPTIONS_FILE_UNSET+=SUBSTITUTE
+OPTIONS_FILE_SET+=VERSION
+OPTIONS_FILE_SET+=SSL
+OPTIONS_FILE_UNSET+=SUEXEC
+OPTIONS_FILE_UNSET+=SUEXEC_RSRCLIMIT
+OPTIONS_FILE_UNSET+=SUEXEC_USERDIR
+OPTIONS_FILE_SET+=REQTIMEOUT
+OPTIONS_FILE_UNSET+=PROXY
+OPTIONS_FILE_UNSET+=IPV4_MAPPED
+OPTIONS_FILE_UNSET+=BUCKETEER
+OPTIONS_FILE_UNSET+=CASE_FILTER
+OPTIONS_FILE_UNSET+=CASE_FILTER_IN
+OPTIONS_FILE_UNSET+=EXT_FILTER
+OPTIONS_FILE_UNSET+=LOG_FORENSIC
+OPTIONS_FILE_UNSET+=OPTIONAL_HOOK_EXPORT
+OPTIONS_FILE_UNSET+=OPTIONAL_HOOK_IMPORT
+OPTIONS_FILE_UNSET+=OPTIONAL_FN_IMPORT
+OPTIONS_FILE_UNSET+=OPTIONAL_FN_EXPORT
+OPTIONS_FILE_UNSET+=PROXY_AJP
+OPTIONS_FILE_UNSET+=PROXY_BALANCER
+OPTIONS_FILE_UNSET+=PROXY_CONNECT
+OPTIONS_FILE_UNSET+=PROXY_FTP
+OPTIONS_FILE_UNSET+=PROXY_HTTP
+OPTIONS_FILE_UNSET+=PROXY_SCGI
