@@ -1,0 +1,80 @@
+---
+  :AUTH_BASIC: true
+  :AUTH_DIGEST: true
+  :AUTHN_ALIAS: true
+  :AUTHN_ANON: true
+  :AUTHN_DBM: true
+  :AUTHN_DEFAULT: true
+  :AUTHN_FILE: true
+  :AUTHZ_DBM: true
+  :AUTHZ_DEFAULT: true
+  :AUTHZ_GROUPFILE: true
+  :AUTHZ_HOST: true
+  :AUTHZ_OWNER: true
+  :AUTHZ_USER: true
+  :CACHE: true
+  :DISK_CACHE: true
+  :FILE_CACHE: true
+  :DAV: true
+  :DAV_FS: true
+  :ACTIONS: true
+  :ALIAS: true
+  :ASIS: true
+  :AUTOINDEX: true
+  :CERN_META: true
+  :CGI: true
+  :CHARSET_LITE: true
+  :DEFLATE: true
+  :DIR: true
+  :DUMPIO: true
+  :ENV: true
+  :EXPIRES: true
+  :HEADERS: true
+  :IMAGEMAP: true
+  :INCLUDE: true
+  :INFO: true
+  :LOG_CONFIG: true
+  :LOGIO: true
+  :MIME: true
+  :MIME_MAGIC: true
+  :NEGOTIATION: true
+  :REWRITE: true
+  :SETENVIF: true
+  :SPELING: true
+  :STATUS: true
+  :UNIQUE_ID: true
+  :USERDIR: true
+  :USERTRACK: true
+  :VHOST_ALIAS: true
+  :FILTER: true
+  :VERSION: true
+  :SSL: true
+  :REQTIMEOUT: true
+  :AUTHN_DBD: false
+  :AUTHNZ_LDAP: false
+  :LDAP: false
+  :DBD: false
+  :MEM_CACHE: false
+  :DAV_LOCK: false
+  :CGID: false
+  :SUBSTITUTE: false
+  :SUEXEC: false
+  :SUEXEC_RSRCLIMIT: false
+  :SUEXEC_USERDIR: false
+  :PROXY: false
+  :IPV4_MAPPED: false
+  :BUCKETEER: false
+  :CASE_FILTER: false
+  :CASE_FILTER_IN: false
+  :EXT_FILTER: false
+  :LOG_FORENSIC: false
+  :OPTIONAL_HOOK_EXPORT: false
+  :OPTIONAL_HOOK_IMPORT: false
+  :OPTIONAL_FN_IMPORT: false
+  :OPTIONAL_FN_EXPORT: false
+  :PROXY_AJP: false
+  :PROXY_BALANCER: false
+  :PROXY_CONNECT: false
+  :PROXY_FTP: false
+  :PROXY_HTTP: false
+  :PROXY_SCGI: false
