@@ -1,4 +1,7 @@
 2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * added some test fixtures
+  
+2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.1.0
   * added workaround for travis-ci issue #1793
   * disable coveralls for ruby < 1.9
